Fix spacing on delete modal for phone size

--- a/src/components/OutfitDetails/OutfitDetails.css
+++ b/src/components/OutfitDetails/OutfitDetails.css
@@ -153,4 +153,12 @@
   .piece-image {
     width: 90%;
   }
+
+  .modal-button-container {
+    flex-direction: column;
+  }
+
+  .delete-button {
+    margin: 5px;
+  }
 }
